# AI-integrated-hotel-booking-app

./: .gitignore  API_ENDPOINTS_REFERENCE.md  CHAT_BACKEND_API.md  CRUD_IMPLEMENTATION_GUIDE.md  DoAn.HotelParking.sln  Promt.txt  README.md  agent.py  agent2.py  app.py  auth_jwt.py  call_api.py  chat_backend.py  chat_controller.py  chat_service.py  docker-compose.minio.yml  howtobuild.txt  howtorun.txt  pyproject.toml  repomix-output.xml  requirements.txt  state.db  systemprompt.txt  test_case.md  testapi.py  tools.py
src/DoAn.HotelParking.Core.Application/: ApplicationServiceRegistration.cs  DoAn.HotelParking.Core.Application.csproj  GlobalUsings.cs
src/DoAn.HotelParking.Core.Application/Mappings/: BookingMappingProfile.cs  HotelImageMappingProfile.cs  HotelMappingProfile.cs  NotificationMappingProfile.cs  OwnerSettingMappingProfile.cs  ParkingMappingProfile.cs  PaymentMappingProfile.cs  PermissionMappingProfile.cs  ProvinceMappingProfile.cs  ReviewMappingProfile.cs  RoleMappingProfile.cs  RoomMappingProfile.cs  RoomTypeMappingProfile.cs  SystemConfigMappingProfile.cs  TimeSlotMappingProfile.cs  UserMappingProfile.cs  WardMappingProfile.cs
src/DoAn.HotelParking.Core.Domain/Enums/: BookingStatus.cs  HotelStatus.cs  NotificationType.cs  ParkingSessionStatus.cs  PaymentMethod.cs  PaymentStatus.cs  (+2 more)
src/DoAn.HotelParking.Infrastructure/: DoAn.HotelParking.Infrastructure.csproj  InfrastructureServiceRegistration.cs
src/DoAn.HotelParking.Presentation.Api/: DoAn.HotelParking.Presentation.Api.csproj  DoAn.HotelParking.Presentation.Api.http  Program.cs  appsettings.json
(+319 files in other folders)
