[project]
name = "day4-2a202600479"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.2",
    "git-filter-repo>=2.47.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
chat-backend = "chat_backend:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "agent2.py",
    "auth_jwt.py",
    "call_api.py",
    "chat_backend.py",
    "chat_controller.py",
    "chat_service.py",
    "testapi.py",
    "Promt.txt",
]
